--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,7 +28,7 @@
     justify-content: center;
 
     img {
-      max-width: 3.6rem;
+      max-width: 4rem;
     }
   }
 
@@ -40,25 +40,16 @@
       font-size: 2.6rem !important;
     }
 
-    strong {
-      color: #02a247;
-    }
-  }
+    p {
+      font-weight: 400 !important;
+      font-size: 1rem;
+      line-height: 1.5rem;
+      letter-spacing: 0.02rem;
+      word-spacing: 0.06rem;
 
-  .services {
-    background: #02214d;
-    padding-bottom: 3.2rem;
-
-    h2 {
-      font-size: 2.2rem;
-      padding: 2rem 0rem 2rem 0rem;
-    }
-
-    .servicesItem {
-      max-width: 25rem;
-      img {
-        max-width: 3.6rem;
-        margin-bottom: 0.5rem;
+      strong {
+        color: #02a247;
+        font-weight: 800;
       }
     }
   }
@@ -68,12 +59,13 @@
     padding-bottom: 3.2rem;
 
     h2 {
-      font-size: 2.2rem;
+      font-size: 2.25rem;
       padding: 2rem 0rem 2rem 0rem;
     }
 
     .servicesItem {
       max-width: 25rem;
+
       img {
         max-width: 3.6rem;
         margin-bottom: 0.5rem;
@@ -86,7 +78,7 @@
     margin-bottom: 6rem;
 
     h2 {
-      font-size: 2.2rem;
+      font-size: 2.25rem;
       padding: 3rem 0rem 2.6rem 0rem;
     }
 
@@ -95,6 +87,9 @@
 
       img {
         max-width: 14rem;
+        -webkit-box-shadow: 0px 3px 33px 5px rgba(0, 0, 0, 0.34);
+        box-shadow: 0px 3px 33px 5px rgba(0, 0, 0, 0.34);
+        border-radius: 0.21rem;
       }
     }
   }
@@ -120,7 +115,7 @@
       }
 
       h2 {
-        font-size: 2.2rem;
+        font-size: 2.25rem;
         padding: 3rem 0rem 1rem 0rem;
       }
     }
@@ -145,6 +140,19 @@
     color: #798493;
 
     padding: 1.8rem;
+
+    svg {
+      content: "";
+      margin-top: 0.5rem;
+      transition: ease-in-out 0.25s;
+      fill: #798493;
+
+      &:hover {
+        fill: #02a247;
+        color: #02a247;
+        cursor: pointer;
+      }
+    }
   }
 }
 
@@ -231,7 +239,10 @@
         max-width: 16rem;
         height: 22rem;
         transition: ease-in-out 0.2s;
+        -webkit-box-shadow: 0px 3px 33px 5px rgba(0, 0, 0, 0.34);
+        box-shadow: 0px 3px 33px 5px rgba(0, 0, 0, 0.34);
         cursor: pointer;
+        border-radius: 0.21rem;
 
         &:hover {
           opacity: 0.7;
@@ -305,5 +316,17 @@
     color: #798493;
 
     padding: 1.8rem;
+
+    svg {
+      content: "";
+      margin-top: 0.5rem;
+      transition: ease-in-out 0.21s;
+      fill: #798493;
+
+      &:hover {
+        fill: #02a247;
+        cursor: pointer;
+      }
+    }
   }
 }
